# ippan-pv-agent

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
client-pilot/: INSTALL_LINUX.md  INSTALL_WINDOWS.md  OUTREACH_DRAFT.md  PILOT_CHECKLIST.md  QUICKSTART.md  README_FOR_DESIREE.md  SAMPLE_OUTPUT.md  WHAT_THIS_AGENT_DOES.md
docs/pv-agent/: ANCHORING.md  ARCHITECTURE.md  CLIENT_DELIVERY.md  DEMO_PALERMO_1MW.md  EVIDENCE_FORMAT.md  README.md  SECURITY_PRIVACY.md  pv-agent.service.example  pv-agent.timer.example
examples/pv/: palermo-events.json  palermo-telemetry-invalid-json-numbers.json  palermo-telemetry-legacy-minimal.json  palermo-telemetry.json  pv-agent.example.toml
examples/pv/events/: evt-corrective-maintenance.json  evt-failure.json  evt-module-cleaning.json  evt-replacement.json  evt-scheduled-maintenance.json
scripts/: e2e-fixture-validate.ps1  e2e-fixture-validate.sh  secret-scan.ps1  secret-scan.sh
src/: anchor.rs  bundle.rs  canonical.rs  config.rs  demo.rs  errors.rs  events.rs  hashing.rs  inspect.rs  lib.rs  main.rs  signing.rs  telemetry.rs  verify.rs
tests/: anchoring.rs  canonicalization.rs  cli_smoke.rs  evidence_bundle.rs  full_spec.rs  signing.rs
tests/common/: mod.rs
