[package]
name = "ippan-pv-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Client-side photovoltaic plant agent for IPPAN/IPPANCENT: deterministic evidence record, signing, local storage, L1 anchoring"
authors = ["IPPAN"]
publish = false

[[bin]]
name = "pv-agent"
path = "src/main.rs"

[lib]
name = "ippan_pv_agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ureq = { version = "2.10", features = ["json"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
